<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--- # Input del nombre completo -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreCompleto" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- # Input de la fecha de Nacimiento -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fechaNac"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--- # Input del teléfono -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputFecha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--- # Input del email -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--- # Input de la descripción -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:onClick="guardaYPasa"
        android:text="@string/btnSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>